--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,3 +1,12 @@
-.container--card{
-    min-height: 300px;
+
+.mentor-card img{
+    width: 120px;
+    height: 120px
+}
+.mentor-card p{
+    font-size: 2rem;
+}
+.course-container--img{
+    height: 50vh;
+
 }
