--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,4 +1,6 @@
-
+.container--card{
+    max-width: 120px;
+}
 
 .container-footer ul{
     font-size: 1.8rem;
@@ -34,6 +36,10 @@
     font-size: 2.4rem;
 }
 .course-container--text p{
+    font-size: 1.8rem;
+    line-height: 2.4rem;
+}
+.course-container--text ul{
     font-size: 1.8rem;
     line-height: 2.4rem;
 }
