--- a/css/tablet.css
+++ b/css/tablet.css
@@ -29,9 +29,11 @@
 }
 
 .course-container--img{
-    height: 30vh;
+    height: 40vh;
+    width: 80vw;
 
 }
+
 .course-container--text h2{
     font-size: 2.4rem;
 }
