--- a/css/style.css
+++ b/css/style.css
@@ -29,9 +29,6 @@ header{
     position: fixed;
     width: 100vw;
     height: auto;
-    min-width: 320px;
-    min-height: 87px;
-    max-height: 300px;
     overflow: hidden;
     z-index: 1;
 }
@@ -44,13 +41,23 @@ header .tdc-logo{
     top: 0;
     left: calc(50% - 84px);
     background-color: transparent;
+    z-index: 2;
 }
-header video{
+.backgroundVideo{
+    width: 100%;
+    position: relative;
+    max-width: 1000px;
+    margin:  0 auto;
+    padding-bottom: 56.25%;
+}
+.backgroundVideo iframe{
+    position: absolute;
     width: 100%;
     height: 100%;
-    object-fit: cover;
-
+    top: 0;
+    left: 0;
 }
+
 /*section2*/
 .main-container{
     width: 90%;
@@ -93,7 +100,6 @@ header video{
     min-width: 114px;
     min-height: 150px;
     margin: 11px auto 4px;
-    background-color: var(--text);
     border-radius: 15px;
     box-shadow: 0 4px 8px rgba(17, 17, 16, 0.16);
 }
@@ -302,4 +308,111 @@ footer{
 
 .course-container--text li{
     margin-top: 5px;
+}
+
+/*dolores*/
+
+.section-proyect{
+    width: 100vw;
+    text-align: center;
+    overflow: hidden;
+}
+.section-proyect h1{
+    font-family: "AlegreyaSans";
+    color: var(--gris);
+    margin-top: 25px;
+    margin-bottom: 15px;
+    font-size: 3.2rem;
+}
+.ProyectVideo{
+    width: 100%;
+    position: relative;
+    max-width: 1000px;
+    margin:  0 auto;
+    padding-bottom: 56.25%;
+}
+.ProyectVideo iframe{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
+
+.section-det{
+    width: 100vw;
+    text-align: center;
+}
+.container-cartel
+{
+    position: relative;
+    display: inline-block;
+    width: 80%;
+    margin-top: 40px;
+    margin-bottom: 25px;
+    max-width: 500px;
+
+}
+.container-cartel img{
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+.container-cartel span{
+    position: absolute;
+    top: 11px;
+    right: 12px;
+    background-image: url('../assets/icons/x.svg');
+    background-color: transparent;
+    background-repeat: no-repeat;
+    width: 30px;
+    height: 30px;
+}
+
+.container-detail{
+    width: 75%;
+    height: 30px;
+    margin: 0 auto;
+    border: 1px solid var(--text);
+    border-radius: 6px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.detail{
+    width: 33%;
+    height: 70%;
+    background-color: transparent;
+    border-right: 1px solid var(--text);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.detail p{
+    color: var(--text);
+    font-size: 1.1rem;
+    background-color: transparent;
+}
+.detail:nth-child(3){
+    border: none;
+}
+.proyect--text{
+    width: 70%;
+    margin: 0 auto;
+    color: var(--text);
+    text-align: left;
+}
+.proyect--text h1{
+    font-family: 'AlegreyaSans';
+    margin-top: 25px;
+    padding-bottom: 5px;
+    font-size: 2.4rem;
+    line-height: 2.4rem;
+}
+
+.proyect--text p{
+    margin-bottom: 12px;
+    font-size: 1.2rem;
 }
