--- a/css/style.css
+++ b/css/style.css
@@ -177,10 +177,27 @@ footer{
     text-decoration: none;
 }
 .decoration{
-    width: 100%;
-    padding-top: 2px;
-    margin-bottom: 25px;
-    background-image: linear-gradient(to right, white 33%,transparent 33%, transparent 66%, white 66%);
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   justify-content: center;
+}
+.line{
+    flex-grow: 1;
+    height: 4px;
+    background-color: var(--text);
+}
+.social-icons{
+    display: flex;
+    justify-content: space-between;
+    margin: 0 20px;
+}
+.social-icons a{
+    margin: 0 15px;
+}
+.social-icons img{
+    width: 24px;
+    height: 24px;
 }
 
 /*trainig*/
