--- a/css/tablet.css
+++ b/css/tablet.css
@@ -4,18 +4,17 @@
 }
 
 .container-footer ul{
-    font-size: 1.8rem;
+    font-size: 1.4rem;
     line-height: 2.4rem;
 }
 
 .description p{
-    font-size: 1.8rem;
+    font-size: 1.4rem;
     line-height: 2.4rem;
 }
 .mentor-card{
     position: relative;
     width: 40vw;
-    height: 30vh;
 }
 
 .mentor-card img{
@@ -23,7 +22,7 @@
     height: 90px
 }
 .mentor-card p{
-    font-size: 1.8rem;
+    font-size: 1.4rem;
     line-height: 2.4rem;
     letter-spacing: 2px;
 }
@@ -33,16 +32,19 @@
     width: 80vw;
 
 }
+.course-container--text{
+    width: 80vw;
+}
 
 .course-container--text h2{
-    font-size: 2.4rem;
+    font-size: 2.0rem;
 }
 .course-container--text p{
-    font-size: 1.8rem;
+    font-size: 1.4rem;
     line-height: 2.4rem;
 }
 .course-container--text ul{
-    font-size: 1.8rem;
+    font-size: 1.4rem;
     line-height: 2.4rem;
 }
 .container-detail{
@@ -63,12 +65,15 @@
 }
 
 
-.proyect--text p{
-    font-size: 1.5rem;
-    line-height: 2.4rem;
+.proyect--text p:nth-child(2){
+    font-size: 1.3rem;
+}
+
+.proyect--text p:nth-child(3){
+    font-size: 1.4rem;
 }
 
 .social-icons img{
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
 }
