--- a/css/style.css
+++ b/css/style.css
@@ -118,9 +118,9 @@ header .tdc-logo{
 }
 .container--card img{
     width: 100%;
-    height: 100%;
+    height: auto;
     border-radius: 15px;
-    object-fit: cover;
+    object-fit: fill;
 }
 
 .overlay{
