--- a/css/tablet.css
+++ b/css/tablet.css
@@ -9,7 +9,8 @@
 }
 
 .description p{
-    font-size: 1.4rem;
+    font-size: 1.2rem;
+    font-weight: 100;
     line-height: 2.4rem;
 }
 .mentor-card{
