--- a/css/style.css
+++ b/css/style.css
@@ -389,6 +389,7 @@ footer{
     display: inline-block;
     width: 80%;
     margin-top: 40px;
+    border-radius: 15px;
     margin-bottom: 25px;
     max-width: 500px;
 
@@ -397,6 +398,7 @@ footer{
     display: block;
     width: 100%;
     height: 100%;
+    border-radius: 30px;
 }
 .container-cartel span{
     position: absolute;
