--- a/css/style.css
+++ b/css/style.css
@@ -236,7 +236,12 @@ footer{
     justify-content: center;
     align-items: center;
 }
-
+.logo img{
+    width: auto;
+    height: 10vh;
+    object-fit: cover;
+    background-repeat: no-repeat;
+}
 .back--icon a img{
     width: 30px;
     height: 30px;
