add text and moved the specialization recidenses

--- a/css/style.css
+++ b/css/style.css
@@ -313,7 +313,7 @@ footer{
     width: 100%;
     height: 100%;
     border-radius: 30px;
-    object-fit: cover;
+    object-fit:fill;
 }
 .course-container--text{
     display: flex;
